Upgrade to sbt 2, Scala 3.9.0
also upgrade Scala Native, Scala.js